# Memory-in-Agents

./: README.md  pyproject.toml
1-ShortTermMemory/: 1-STM.py  2-Persistence.py  3-Trimming.py  4-Deletion.py  5-Summarization.py
2-LongTermMemory/: 1-LTM.py  2-SemanticLTM.py
